--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h2>Using Tables in HTML</h2>
                 <p>In HTML, tables are used for tabular data. Think of data similar to a schedule or what you might find easier to read in a spreadsheet format. Tables can cause issues on smaller screens, as they aren't responsive, so consider that if you add them to a page. If they will be small enough to fit on the screen, even with their data, you should be fine.</p>
                 <table>
-                    <!-- TO DO: Complete the code below to create a caption for this table -->
+                    <!-- DONE: Complete the code below to create a caption for this table -->
                     <caption>Hours of Operation</caption>
 
                     <thead>
@@ -168,12 +168,12 @@
 
                     <tr>
                         <td>Saturday</td>
-                        <!-- TO DO: Complete the code below to create a cell that will span two rows -->
+                        <!-- DONE: Complete the code below to create a cell that will span two rows -->
                         <td rowspan="2"><span>Closed</span> By Appointment Only</td>
                     </tr>
 
                     <tr>
-                        <!-- TO DO: Complete the code below to create a cell containing that text -->
+                        <!-- DONE: Complete the code below to create a cell containing that text -->
                         <td>Sunday</td>
                     </tr>
                 </table>
